--- a/style.css
+++ b/style.css
@@ -2,3 +2,12 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    background-color: rgb(231, 209, 252);
+    color: rgb(0, 0, 0);
+}
+
+h1{
+    color: rgb(157, 235, 235);
+}
