--- a/style.css
+++ b/style.css
@@ -10,16 +10,21 @@
 
 * {
     margin: 0;
-    padding: 
+    padding: 0;
+}
 
 body {
     background-color: var(--fundo);
     color: var(--text);
-    font size: 30px;
+    font-size: 30px;
 }
 
 h1{
-    color: rgb(157, 235, 235);
+    color: var(--primeira-cor);
+    font-size: 35px;
 }
 
-
+.conteudo {
+    display: flex;
+    height: 200px;
+}
